--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,4 +40,8 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=0
 
 redis.masters=mymaster
-redis.sentinels=192.168.122.134:26379,192.168.122.130:26379
+redis.sentinels=192.168.122.134:26379,192.168.122.136:26379
+
+basePackage=com.cts.system
+
+logging.level.com.cts.system=debug
